# tnid

./: Cargo.toml  README.md  naming.md  spec.md
docs/: design.md  naming.md  spec.md
src/: data_encoding.rs  encryption.rs  error.rs  lib.rs  name_encoding.rs  name_encoding_0.rs  tnid_variant.rs  utils.rs  uuidlike.rs  v0.rs  v1.rs
